theme/standard-totara/styles_totara.css
/**
 * Global CSS file
 **/

html, body {
      height: 100%;
}

p {
    margin:1em 0;
}

.clearfix {
  clear:both;
  margin:0;
  padding:0;
}

/**
 * Layout Styles
 **/
#top-bg {
	width:100%;
	z-index: -99;
	overflow:auto
}

#page {
  background: #FFFFFF;
}

#content {
  clear:both;
  padding: 10px 23px;
  margin-bottom: 100px; /* Stopfs footer overlapping content*/
}

#layout-table {
  margin-top:-5px;
  border-collapse:collapse;
}

div.course-content  #layout-table {
  margin-top:-5px;
}

#layout-table #left-column {
  width: 180px !important;
  padding-right: 12px;
}

#layout-table #right-column {
  width: 180px !important;
  padding-top: 0;
}

#layout-table #middle-column {
  padding-top: 0;
  padding-left: 0;
  padding-right: 12px;
}

#site-index  #left-column {
  padding-right:0;
  width:241px !important;
}

#site-index  #right-column {
    width:auto !important;
}

#left-column .block_admin_tree div.header {
    margin-top: 5px;
    padding: 7px 20px;
}

#left-column .block_admin_tree {
    width: auto;
}

#left-column .block_admin_tree div.header .title h2 {
    font-size: 1.4em;
    font-weight: bold;
    margin: 0;
    padding: 0;
}

#left-column .block_admin_tree div.content {
    border: 0 none;
    padding-left: 30px;
    padding-right: 20px;
}

#course-view #middle-column {
  padding-top:0;
}

#course-view .section td.content {
  padding-top:15px;
  padding-bottom:15px;
}

div.course-content #middle-column {
  margin-left: 180px;
  margin-right: 180px;
}

.loginbox {
  margin:15px auto 25px auto;
}

.loginbox {
    border:0 none;
}
.loginbox .guestsub, .loginbox .forgotsub {
    border-top:0 none;
}

body#user-positions #container {
	margin-bottom: -28px;
}

/**
 * Header Styles
 **/

div#header-home {
  height: auto;
  padding:0;
  margin:0;
}

div#header {
  height: auto;
  padding:0;
  margin:0;
}
div#header .logo {
   padding: 0 0 0 21px;
}
#header-logo-container {
}
#header-logo-container .logo {
   width:235px;
   padding: 20px 0 10px 10px;
}
#header-logo-container .headersearch {
	float:right;
	margin-top:13px;
	padding:20px 12px 20px 10px;
	text-align:center;
	width:350px;

}
#header-logo-container .headersearch input {
   font-size:1em !important;
}

#header-logo-container .headersearch .input-text {
	width: 270px;
}

#header  .tagline {
   float:right;
   line-height:0;
   padding: 55px 24px 0 0;
}

#heading-hr {
  display: none;
}

.headermenu {
  width:auto;
  height: 22px;
  float:none;
  margin-bottom:2px;
  padding:3px 10px 4px 10px;
}

.navbar {
  clear:both;
  padding:5px 5px 4px 16px;
  margin: 0;
  border:medium none;
}

.navbar .navbutton, .navbar .menu {
  margin-right: 19px;
}

.navbar .navbutton .popupform {
	padding-top: 0px !important;
}

.login-container {
  font-family: verdana, helvetica, sans-serif;
  float:none;
  font-size: 1em;
  letter-spacing: -0.05em;
  padding: 5px 10px 5px 10px;
  text-align:right;
}

.navigation {
  display:none;
}

#header-search {
  float:right;
  margin-right: 23px;
  padding-left:23px;
  padding-bottom:2px;
}

#header-search #coursesearch {
  margin-top: 11px;
  overflow: hidden;
}

#header-search #coursesearchbox {
  float: left;
  width: 150px;
  border: 1px;
  padding: 5px;
}

#header-search #coursesubmit {
  width: 28px;
  height: 21px;
  border: none;
  margin: 0;
  margin-left: 5px;
  padding: 0;
  text-indent: -10000px;
  overflow: hidden;
  font-size: 0;
  line-height: 0;
}


/**
    Action notifications
**/
.notifyproblem, .notifysuccess {
  text-align: center;
  padding:10px 40px;
  width:40%;
  margin:5px auto 15px auto;
  font-weight:bold;
  text-align:left !important;
}
.notifyproblem {
  border:1px solid #BE0000;
  color:#BE0000;
  background:#F6BEBF;
}

.notifysuccess {
  border:1px solid #62AA2C;
  color:#62AA2C;
  background:#CFF1B4;
}



/**
 * Footer Styles
 **/

#footer {
	padding:7px 15px;
}

#footer .logininfo {
  display:none;
  text-align: center;
  width: 100%;
  padding-bottom: 5px;
  font-size: 0.8em;
}

#footer .footerlinks ul {
  margin:0;
  padding:0;
}

#footer .footerlinks ul li {
  display:inline;
  list-style-type: none;
}

#footer .footerlinks li div {
  display:inline;
  padding: 0 13px;
}

#footer .validators {
    margin-top: 15px;
}

#footer .performanceinfo {
    text-align: center;
}

#footer .performanceinfo span {
    padding: 5px;
    display: inline;
}

.block_admin_tree .adminsearchform {
  text-align:center
}

.block_admin_tree #query {
  width:90px;
}

/**
 *  Heading colors
 **/

h2.headingblock,
.headingblock,
#middle-column h2 {
  text-align:left;
  border:none;
  padding:0 0 5px;
  margin-top:0;
  border:none;
}

.navbar {
  position: relative;
  z-index: 0;
}


/**
 * Format Page
 **/

.format-page {
  margin-left: 0;
}


/*****************************************************************************/
/** Frontpage **/
/*****************************************************************************/

.frontpage {
  width:720px;
}

#content p.smalltext {
  font-size: 0.9em;
}

#front-blocks-spot {
  width:684px;
  margin-top:5px;
}

#front-blocks-spot .header {
  height: 83px;
  overflow:hidden;
}

#front-blocks-spot h2 {
  width: 150px;
  padding: 6px 0 0 14px;
}

#front-blocks-spot td.col-blank {
  padding:4px;
}

#front-blocks-spot td.col-one,
#front-blocks-spot td.col-two{
  width:335px;
  padding-bottom: 11px;
}

#front-blocks-spot td .footer {
  width:336px;
  text-align:right;
  padding: 6px 8px;
}

#front-blocks-spot .footer .more a {
  padding-right:18px;
}

#front-blocks-lists {
  margin-top:0px;
}

#front-blocks-lists td {
   font-family: 'Trebuchet ms',Verdana, Arial, Helvetica, sans-serif;
   width:352px;
}

#front-blocks-lists td.col-one {
   padding-right: 14px;
}

#front-blocks-lists h2 {
  font-size: 1.5em;
  font-weight:normal;
  padding: 3px 10px;
  margin:0;
  border:1px solid #D2D2D2;
  border-bottom:none;
}

#front-blocks-lists .content {
   padding:7px 10px;
   border-left: 1px solid #d2d2d2;
   border-right: 1px solid #d2d2d2;
}
/* ... */

